# earthquake-tracker

./: .env.example  .gitignore  .pre-commit-config.yaml  README.md  docker-compose.yml
.github/workflows/: backend-tests.yml  docker-build.yml  frontend-tests.yml
backend/: Dockerfile  alembic.ini  pyproject.toml
backend/app/: config.py  database.py  main.py  migrations.py
backend/app/alembic/: env.py
backend/app/alembic/versions/: 001_initial_schema.py  002_drop_cell_aggregates.py
backend/app/api/: cells.py  earthquakes.py  globe.py  router.py
backend/app/models/: __init__.py  cell.py  earthquake.py
backend/app/schemas/: cell.py  earthquake.py  stats.py
backend/app/services/: aggregator.py  grid.py  ingestor.py  usgs_client.py
backend/app/tasks/: scheduler.py
backend/tests/: conftest.py  factories.py  test_aggregator.py  test_api_cells.py  test_api_earthquakes.py  test_api_globe.py  test_grid.py  test_ingestor.py  test_migrations.py  test_scheduler.py  test_usgs_client.py
frontend/: .prettierignore  Dockerfile  eslint.config.js  index.html  package-lock.json  package.json  playwright.config.ts  vite.config.ts
frontend/e2e/: smoke.spec.ts
frontend/src/: App.tsx
frontend/src/api/: client.ts  earthquakes.ts
frontend/src/assets/: plate-boundaries.json  volcanoes.json
frontend/src/components/: EarthquakeDataLoader.test.tsx  EarthquakeDataLoader.tsx  SidebarToggle.test.tsx  SidebarToggle.tsx
frontend/src/store/: useAppStore.test.ts  useAppStore.ts
frontend/src/test/: setup.ts
frontend/src/types/: volcano.ts
frontend/src/utils/: grid.ts  (+13 more)
(+38 files in other folders)
