[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "earthquake-tracker-backend"
version = "1.0.0"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.30.0",
    "sqlalchemy[asyncio]>=2.0.30",
    "asyncpg>=0.29.0",
    "pydantic-settings>=2.3.0",
    "httpx>=0.27.0",
    "apscheduler>=3.10.4",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2.0",
    "pytest-asyncio>=0.23.0",
    "anyio>=4.4.0",
    "respx>=0.21.1",
    "ruff>=0.6.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "session"
asyncio_default_test_loop_scope = "session"
testpaths = ["tests"]
markers = [
    "db: marks tests that require a running Postgres test database",
]

[tool.ruff]
line-length = 100
target-version = "py312"
exclude = [".venv"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "W"]

[tool.ruff.lint.flake8-bugbear]
# FastAPI's dependency-injection pattern (`= Depends(...)`, `= Query(...)`)
# calls a function in an argument default on purpose — B008 exists to catch
# accidental mutable-default bugs, not this idiom.
extend-immutable-calls = ["fastapi.Depends", "fastapi.Query"]

[tool.hatch.build.targets.wheel]
packages = ["app"]
